--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,4 @@
 version: '3'
-# networks:
-#   xxx_project:
-#     external: true
 volumes:
   vendor:
   node_modules:
@@ -11,7 +8,6 @@ services:
     hostname: nginx.com
     ports:
       - '80:80'
-      # - '443:443'
     environment:
       - PHP_FPM_CONTAINER=php-fpm
       - PHP_FPM_PORT=9000
@@ -22,7 +18,6 @@ services:
       - ./log/nginx:/var/log/nginx
     depends_on:
       - php-fpm
-
   php-fpm:
     build:
       context: ./php
@@ -30,3 +25,31 @@ services:
     volumes:
       - ${SRC_DIR_HOST}:${SRC_DIR_CONTAINTER}
       - ./php/conf.d:/usr/local/etc/php/conf.d
+  mysql:
+    image: mysql:5.7
+    environment:
+      MYSQL_DATABASE: database
+      MYSQL_USER: docker
+      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: secret
+      TZ: 'Asia/Tokyo'
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    volumes:
+      - ~/temp/mysql/data:/var/lib/mysql
+      - ~/temp/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ~/temp/mysql/sql:/docker-entrypoint-initdb.d
+    ports:
+      - 3306:3306
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOST=mysql
+      - PMA_USER=docker
+      - PMA_PASSWORD=secret
+    links:
+      - mysql
+    ports:
+       - 8080:80
+    volumes:
+       - /sessions
