--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,27 +1,36 @@
 server {
-    autoindex off;
-    underscores_in_headers on;
-
-    index index.html index.php;
+    listen 80;
+    server_name example.com;
+    # root /example.com/public;
     root /src/public;
 
-    listen       80;
-    # listen       443 ssl;
-    # ssl on;
-    # ssl_certificate      /path/to/cert.pem;
-    # ssl_certificate_key  /path/to/cert.key;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+
+    index index.html index.htm index.php;
+
+    charset utf-8;
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
-    location ~ [^/]\.php(/|$) {
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    error_page 404 /index.php;
+
+    location ~ \.php$ {
+        # fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
-
+        # fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
-
-        add_header Access-Control-Allow-Origin *;
     }
+
+    # location ~ /\.(?!well-known).* {
+    #     deny all;
+    # }
 }
