mysqlを追加、各conf.dを上書きしないよう修正

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -14,34 +14,7 @@ php -r "unlink('composer-setup.php');"
 FROM php:7.2.13-fpm-alpine
 COPY --from=composer_builder /temp/composer /usr/local/bin/composer
 WORKDIR /temp
-# install libraries
-# RUN apk update && \
-#     apk add
-#         bash \
-#         gcc \
-#         icu \
-#         icu-libs \
-#         icu-dev \
-#         wget \
-#         vim \
-#         zlib-dev \
-#         libxml2-dev \
-#         libpng-dev \
-#         build-base \
-#         autoconf \
-#         nodejs \
-#         npm \
-#         freetype-dev \
-#         libjpeg-turbo-dev \
-#         libpng-dev \
-#     && docker-php-source extract \
-#     && docker-php-ext-install \
-#         bcmath \
-#         pdo \
-#         pdo_mysql \
-#         intl \
-#         mbstring \
-#         zip \
-#         iconv \
-#         xml \
-#         gd \
+RUN cp /usr/local/etc/php/php.ini-development \
+      /usr/local/etc/php/php.ini && \
+    apk update && \
+    docker-php-ext-install pdo_mysql
