--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - SRC_DIR_HOST=./src
       - SRC_DIR_CONTAINTER=/var/www/src
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./log/nginx:/var/log/nginx
     depends_on:
       - php-fpm
@@ -28,5 +28,21 @@ services:
       context: ./php
     working_dir: ${SRC_DIR_CONTAINTER}
     volumes:
-      - ./php/conf.d:/usr/local/etc/php/conf.d
+      - ./php/conf.d/my.ini:/usr/local/etc/php/conf.d/my.ini
       - ${SRC_DIR_HOST}:${SRC_DIR_CONTAINTER}
+  mysql:
+      image: mysql:5.7
+      container_name: db-host
+      environment:
+        MYSQL_ROOT_PASSWORD: root
+        MYSQL_DATABASE: database
+        MYSQL_USER: docker
+        MYSQL_PASSWORD: docker
+        TZ: 'Asia/Tokyo'
+      command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      volumes:
+      - ./mysql/data:/var/lib/mysql
+      - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./mysql/sql:/docker-entrypoint-initdb.d
+      ports:
+      - 3306:3306
