--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,12 @@ services:
     environment:
       - PHP_FPM_CONTAINER=php-fpm
       - PHP_FPM_PORT=9000
-      - SRC_DIR_HOST=./src
-      - SRC_DIR_CONTAINTER=/var/www/src
+      - SRC_DIR_HOST=./${SRC_DIR_HOST}
+      - SRC_DIR_CONTAINTER=/var/www/${SRC_DIR_CONTAINTER}
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./log/nginx:/var/log/nginx
+      - ~/temp/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/log:/var/log/nginx
+      - ${SRC_DIR_HOST}:${SRC_DIR_CONTAINTER}
     depends_on:
       - php-fpm
 
@@ -28,5 +29,33 @@ services:
       context: ./php
     working_dir: ${SRC_DIR_CONTAINTER}
     volumes:
+      #- ./php/conf.d/my.ini:./php/conf.d/my.ini
       - ${SRC_DIR_HOST}:${SRC_DIR_CONTAINTER}
-      - ./php/conf.d:/usr/local/etc/php/conf.d
+  mysql:
+      image: mysql:5.7
+      environment:
+        MYSQL_DATABASE: database
+        MYSQL_USER: docker
+        MYSQL_PASSWORD: secret
+        MYSQL_ROOT_PASSWORD: secret
+        TZ: 'Asia/Tokyo'
+      command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      volumes:
+        - ~/temp/mysql/data:/var/lib/mysql
+        - ~/temp/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+        - ~/temp/mysql/sql:/docker-entrypoint-initdb.d
+      ports:
+        - 3306:3306
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOST=mysql
+      - PMA_USER=docker
+      - PMA_PASSWORD=secret
+    links:
+      - mysql
+    ports:
+       - 8080:80
+    volumes:
+       - /sessions
